--- a/kraszewski.html
+++ b/kraszewski.html
@@ -267,13 +267,16 @@
             <h2>Osiągnięcia i Wyróżnienia</h2>
             <ul>
                 <li>
-                    <strong>2024:</strong> <a href="https://pwr.edu.pl/uczelnia/aktualnosci/academia-professorum-iuniorum-po-raz-pierwszy-w-pelnym-skladzie-13563.html" target="_blank"><em>Academia Professorum Iuniorum</em></a> – powołanie do grupy doradczej JM. Rektora złożonej z wybitnych naukowców Politechniki Wrocławskiej.
+                    <strong>2024:</strong> <a href="https://pwr.edu.pl/uczelnia/aktualnosci/academia-professorum-iuniorum-po-raz-pierwszy-w-pelnym-skladzie-13563.html" target="_blank"><em>Academia Professorum Iuniorum</em></a> – powołanie na 2 letnią kadencję do grupy doradczej JM. Rektora złożonej z wybitnych naukowców Politechniki Wrocławskiej.
                 </li>
                 <li>
-                    <strong>2023:</strong> Laureat tytułu <a href="https://naukowiecprzyszlosci.pl/laureaci-2023/" target="_blank"><strong>"Naukowiec Przyszłości 2023"</strong></a> podczas <em>Europejskiego Forum Inteligentnego Rozwoju</em>. <a href="https://irforum.pl/speaker/dr-inz-sebastian-kraszewski/" target="_blank">Prof. Sebastian Kraszewski (WUST, D.Sc. Ph.D. Med.Res.Eng.)</a> został wyróżniony za wykorzystanie metod sztucznej inteligencji w podnoszeniu jakości usług medycznych.
+                    <strong>2024:</strong> Nominacja do tytułu <strong>"Osobowość Roku 2024"</strong> w plebiscycie Gazety Wrocławskiej (kategoria Nauka). <a href="https://gazetawroclawska.pl/dr-hab-inz-prof-sebastian-kraszewski/pk/7173681" target="_blank">(Zobacz profil kandydata)</a>
                 </li>
                 <li>
-                    <strong>2020:</strong> Nominacja do Jubileuszowej Nagrody <strong>"Zasłużony dla Inteligentnego Rozwoju"</strong> za aplikację metod AI w projektowaniu nowych leków (Centrum Inteligentnego Rozwoju).
+                    <strong>2023:</strong> Laureat tytułu <a href="https://naukowiecprzyszlosci.pl/laureaci-2023/" target="_blank"><strong>"Naukowiec Przyszłości 2023"</strong></a> podczas <a href="https://irforum.pl/speaker/dr-inz-sebastian-kraszewski/" target="_blank"><em>Europejskiego Forum Inteligentnego Rozwoju</em></a>, gdzie został wyróżniony za wykorzystanie metod sztucznej inteligencji w podnoszeniu jakości usług medycznych.
+                </li>
+                <li>
+                    <strong>2020:</strong> Nominacja do Jubileuszowej Nagrody <strong>"Zasłużony dla Inteligentnego Rozwoju"</strong> za aplikację metod AI w projektowaniu nowych leków (<a href="https://irforum.pl/speaker/dr-inz-sebastian-kraszewski/" target="_blank">Centrum Inteligentnego Rozwoju</a>).
                 </li>
                 <li>
                     <strong>2019:</strong> Laureat <strong>Polskiej Nagrody Inteligentnego Rozwoju</strong> (kategoria: Naukowiec Przyszłości) za projekt INNOSEPT. Wyróżnienie wręczono podczas <a href="https://irforum.pl/edycja-2019/" target="_blank"><em>Europejskiego Forum Inteligentnego Rozwoju - Kongres Projektów Przyszłości w Uniejowie</em></a>.
@@ -282,13 +285,13 @@
                     <strong>2017:</strong> I miejsce w konkursie <strong>"Pokolenie W"</strong> (kategoria Nauka) za projekty zmieniające Wrocław (projekt INNOSEPT). <a href="https://pwr.edu.pl/uczelnia/aktualnosci/naukowiec-z-pwr-zwyciezca-konkursu-pokolenie-w-10700.html" target="_blank" rel="noopener">(Zobacz artykuł na stronie PWr)</a>
                 </li>
                 <li>
-                    <strong>2015-2018:</strong> Stypendium <strong>Ministra Nauki i Szkolnictwa Wyższego</strong> dla Wybitnych Młodych Naukowców.
+                    <strong>2015-2018:</strong> Stypendium Ministra Nauki i Szkolnictwa Wyższego dla <a href="https://tuwroclaw.com/artykul/przyznali-stypendia-dla-n1352186" target="_blank">Wybitnych Młodych Naukowców</a>.
                 </li>
                 <li>
-                    <strong>Od 2013:</strong> Liczne nagrody Rektora i Dziekana Politechniki Wrocławskiej za wybitne osiągnięcia naukowe.
+                    <strong>Od 2013:</strong> Liczne nagrody Rektora i Dziekana Politechniki Wrocławskiej <a href="https://orcid.org/0000-0003-3244-7694" target="_blank">za wybitne osiągnięcia naukowe</a>.
                 </li>
                 <li>
-                   Działalność naukowa: <a href="https://www.researchgate.net/lab/MEDPH-Laboratory-Molecular-Events-Design-of-Pharmaceuticals-Sebastian-Kraszewski" target="_blank">Laboratorium MEDPH (ResearchGate)</a>.
+                   Działalność naukowa: <a href="https://www.researchgate.net/lab/MEDPH-Laboratory-Molecular-Events-Design-of-Pharmaceuticals-Sebastian-Kraszewski" target="_blank">Laboratorium MEDΦ (ResearchGate)</a>.
                 </li>
             </ul>
         </div>
@@ -300,6 +303,11 @@
             </p>
             <ul style="list-style: none; padding: 0;">
                 <li style="margin-bottom: 12px;">
+                    <a href="https://gazetawroclawska.pl/dr-hab-inz-prof-sebastian-kraszewski/pk/7173681" target="_blank" style="color: var(--primary); font-weight: 500; text-decoration: none; display: flex; align-items: center; gap: 8px;">
+                        <span>🏆</span> Nominacja "Osobowość Roku 2024" - Gazeta Wrocławska
+                    </a>
+                </li>
+                <li style="margin-bottom: 12px;">
                     <a href="https://pwr.edu.pl/uczelnia/aktualnosci/academia-professorum-iuniorum-po-raz-pierwszy-w-pelnym-skladzie-13563.html" target="_blank" style="color: var(--primary); font-weight: 500; text-decoration: none; display: flex; align-items: center; gap: 8px;">
                         <span>📄</span> Academia Professorum Iuniorum - Politechnika Wrocławska
                     </a>
@@ -307,6 +315,11 @@
                 <li style="margin-bottom: 12px;">
                     <a href="https://naukowiecprzyszlosci.pl/laureaci-2023/" target="_blank" style="color: var(--primary); font-weight: 500; text-decoration: none; display: flex; align-items: center; gap: 8px;">
                         <span>🏆</span> Lista Laureatów "Naukowiec Przyszłości 2023"
+                    </a>
+                </li>
+                <li style="margin-bottom: 12px;">
+                    <a href="https://tuwroclaw.com/artykul/przyznali-stypendia-dla-n1352186" target="_blank" style="color: var(--primary); font-weight: 500; text-decoration: none; display: flex; align-items: center; gap: 8px;">
+                        <span>🎓</span> Stypendia dla Wybitnych Młodych Naukowców (TuWrocław)
                     </a>
                 </li>
                 <li style="margin-bottom: 12px;">
@@ -326,7 +339,7 @@
                 </li>
                 <li style="margin-bottom: 12px;">
                     <a href="https://www.researchgate.net/lab/MEDPH-Laboratory-Molecular-Events-Design-of-Pharmaceuticals-Sebastian-Kraszewski" target="_blank" style="color: var(--primary); font-weight: 500; text-decoration: none; display: flex; align-items: center; gap: 8px;">
-                        <span>🔬</span> Laboratorium MEDPH - Profil ResearchGate
+                        <span>🔬</span> Laboratorium MEDΦ - Profil ResearchGate
                     </a>
                 </li>
             </ul>
