--- a/kraszewski.html
+++ b/kraszewski.html
@@ -273,7 +273,7 @@
                     <strong>2024:</strong> Nominacja do tytułu <strong>"Osobowość Roku 2024"</strong> w plebiscycie Gazety Wrocławskiej (kategoria Nauka). <a href="https://gazetawroclawska.pl/dr-hab-inz-prof-sebastian-kraszewski/pk/7173681" target="_blank">(Zobacz profil kandydata)</a>
                 </li>
                 <li>
-                    <strong>2023:</strong> Laureat tytułu <a href="https://naukowiecprzyszlosci.pl/laureaci-2023/" target="_blank"><strong>"Naukowiec Przyszłości 2023"</strong></a> podczas <a href="https://irforum.pl/speaker/dr-inz-sebastian-kraszewski/" target="_blank"><em>Europejskiego Forum Inteligentnego Rozwoju</em></a>, gdzie został wyróżniony za wykorzystanie metod sztucznej inteligencji w podnoszeniu jakości usług medycznych.
+                    <strong>2023:</strong> Laureat tytułu <strong>"Naukowiec Przyszłości 2023"</strong> podczas <a href="https://naukowiecprzyszlosci.pl/laureaci-2023/" target="_blank"><em>Europejskiego Forum Inteligentnego Rozwoju</em></a>, gdzie został wyróżniony za wykorzystanie metod sztucznej inteligencji w podnoszeniu jakości usług medycznych.
                 </li>
                 <li>
                     <strong>2020:</strong> Nominacja do Jubileuszowej Nagrody <strong>"Zasłużony dla Inteligentnego Rozwoju"</strong> za aplikację metod AI w projektowaniu nowych leków (<a href="https://irforum.pl/speaker/dr-inz-sebastian-kraszewski/" target="_blank">Centrum Inteligentnego Rozwoju</a>).
