--- a/kraszewski.html
+++ b/kraszewski.html
@@ -337,8 +337,8 @@
         .media-thumb {
             height: 140px;
             background-size: cover;
-            background-position: center;
-            background-color: #e2e8f0; /* Fallback color added for preview */
+            background-position: top center; /* Changed to top center for better screenshot framing */
+            background-color: #e2e8f0; 
         }
         .media-content {
             padding: 16px 18px 18px;
@@ -510,9 +510,10 @@
             oraz profesora Politechniki Wrocławskiej.
         </p>
         <div class="media-cards">
+            <!-- Dynamic Screenshot: Gazeta Wrocławska -->
             <a href="https://gazetawroclawska.pl/dr-hab-inz-prof-sebastian-kraszewski/pk/7173681"
                class="media-card" target="_blank" rel="noopener">
-                <div class="media-thumb" style="background-image:url('gw.jpg');"></div>
+                <div class="media-thumb" style="background-image:url('https://s0.wp.com/mshots/v1/https%3A%2F%2Fgazetawroclawska.pl%2Fdr-hab-inz-prof-sebastian-kraszewski%2Fpk%2F7173681?w=600&h=400');"></div>
                 <div class="media-content">
                     <span class="media-tag">Osobowość Roku 2024</span>
                     <h3>Gazeta Wrocławska</h3>
@@ -520,9 +521,10 @@
                 </div>
             </a>
 
+            <!-- Dynamic Screenshot: PWr -->
             <a href="https://pwr.edu.pl/uczelnia/aktualnosci/academia-professorum-iuniorum-po-raz-pierwszy-w-pelnym-skladzie-13563.html"
                class="media-card" target="_blank" rel="noopener">
-                <div class="media-thumb" style="background-image:url('pwr.jpg');"></div>
+                <div class="media-thumb" style="background-image:url('https://s0.wp.com/mshots/v1/https%3A%2F%2Fpwr.edu.pl%2Fuczelnia%2Faktualnosci%2Facademia-professorum-iuniorum-po-raz-pierwszy-w-pelnym-skladzie-13563.html?w=600&h=400');"></div>
                 <div class="media-content">
                     <span class="media-tag">Academia Professorum Iuniorum</span>
                     <h3>Politechnika Wrocławska</h3>
@@ -530,9 +532,10 @@
                 </div>
             </a>
 
+            <!-- Dynamic Screenshot: IR Forum -->
             <a href="https://irforum.pl/speaker/dr-inz-sebastian-kraszewski/"
                class="media-card" target="_blank" rel="noopener">
-                <div class="media-thumb" style="background-image:url('irforum.jpg');"></div>
+                <div class="media-thumb" style="background-image:url('https://s0.wp.com/mshots/v1/https%3A%2F%2Firforum.pl%2Fspeaker%2Fdr-inz-sebastian-kraszewski%2F?w=600&h=400');"></div>
                 <div class="media-content">
                     <span class="media-tag">Naukowiec Przyszłości</span>
                     <h3>Inteligentny Rozwój</h3>
@@ -540,8 +543,9 @@
                 </div>
             </a>
 
+            <!-- Dynamic Screenshot: NCNI -->
             <a href="https://ncni.pl" class="media-card" target="_blank" rel="noopener">
-                <div class="media-thumb" style="background-image:url('ncni-thumb.jpg');"></div>
+                <div class="media-thumb" style="background-image:url('https://s0.wp.com/mshots/v1/https%3A%2F%2Fncni.pl?w=600&h=400');"></div>
                 <div class="media-content">
                     <span class="media-tag">NCNI Wrocław</span>
                     <h3>Naukowe Centrum Neuroinnowacji</h3>
