--- a/kraszewski.html
+++ b/kraszewski.html
@@ -12,8 +12,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <title>Dr hab. inż. Sebastian Kraszewski | Dyrektor Naukowy & Trener Neuroróżnorodności</title>
-    <meta name="description" content="Profil eksperta: Dr hab. inż. Sebastian Kraszewski, prof. PWr. Dyrektor Naukowy NCNI Wrocław, Trener Neuroróżnorodności, specjalista od technologii w traumatologii i terapii ADHD.">
-    <meta name="keywords" content="Sebastian Kraszewski, Trener Neuroróżnorodności, Traumatologia VR, Innowacje medyczne, Terapia ADHD, Biofizyka, Politechnika Wrocławska, NCNI Wrocław">
+    <meta name="description" content="Profil eksperta: Dr hab. inż. Sebastian Kraszewski, prof. PWr. Twórca Metody Kraszewskiego, Dyrektor Naukowy NCNI Wrocław, specjalista od technologii w traumatologii i terapii ADHD.">
+    <meta name="keywords" content="Sebastian Kraszewski, Metoda Kraszewskiego, Trener Neuroróżnorodności, Traumatologia VR, Innowacje medyczne, Terapia ADHD, Biofizyka, Politechnika Wrocławska, NCNI Wrocław">
     <link rel="canonical" href="https://ncni.pl/kraszewski.html">
     <link rel="icon" href="logo.png" type="image/png">
 
@@ -32,7 +32,7 @@
       "@type": "Person",
       "name": "Sebastian Kraszewski",
       "honorificPrefix": "Dr hab. inż.",
-      "jobTitle": ["Dyrektor Naukowy", "Trener Neuroróżnorodności"],
+      "jobTitle": ["Dyrektor Naukowy", "Twórca Metody Kraszewskiego", "Trener Neuroróżnorodności"],
       "affiliation": {
         "@type": "MedicalClinic",
         "name": "NCNI - Naukowe Centrum Neuroinnowacji",
@@ -41,14 +41,14 @@
       "url": "https://ncni.pl/kraszewski.html",
       "image": "https://ncni.pl/sk.jpg",
       "alumniOf": "Politechnika Wrocławska",
-      "description": "Ekspert w dziedzinie inżynierii biomedycznej, biofizyki i innowacyjnych terapii neurodydaktycznych. Dyrektor Naukowy NCNI Wrocław, Trener Neuroróżnorodności, wykorzystuje technologie VR w traumatologii i terapii ADHD.",
+      "description": "Twórca autorskiej Metody Kraszewskiego. Ekspert w dziedzinie inżynierii biomedycznej, biofizyki i innowacyjnych terapii neurodydaktycznych. Dyrektor Naukowy NCNI Wrocław.",
       "knowsAbout": [
+        "Metoda Kraszewskiego",
         "ADHD Therapy",
         "Virtual Reality in Medicine",
         "Biophysics",
         "Neurodiversity Coaching",
-        "Traumatology Technology",
-        "Medical Innovation"
+        "Traumatology Technology"
       ],
       "sameAs": [
         "https://irforum.pl/speaker/dr-hab-inz-sebastian-kraszewski-prof-pwr/",
@@ -80,6 +80,14 @@
       "mainEntity": [
         {
           "@type": "Question",
+          "name": "Czym jest Metoda Kraszewskiego?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "To autorski program terapeutyczny dr. hab. inż. Sebastiana Kraszewskiego, łączący VR, Biofeedback i Neuromodulację w celu optymalizacji pracy mózgu i terapii zaburzeń neurorozwojowych."
+          }
+        },
+        {
+          "@type": "Question",
           "name": "Jaką rolę pełni dr hab. inż. Sebastian Kraszewski w NCNI?",
           "acceptedAnswer": {
             "@type": "Answer",
@@ -92,14 +100,6 @@
           "acceptedAnswer": {
             "@type": "Answer",
             "text": "Tak. Jako profesor Politechniki Wrocławskiej i ekspert inżynierii biomedycznej współtworzy w NCNI Wrocław protokoły terapeutyczne oparte na VR, biofeedbacku i sztucznej inteligencji."
-          }
-        },
-        {
-          "@type": "Question",
-          "name": "Czy NCNI Wrocław jest miejscem przyjaznym osobom neuroróżnorodnym?",
-          "acceptedAnswer": {
-            "@type": "Answer",
-            "text": "NCNI Wrocław pracuje w duchu Neurodiversity Affirming, oferując diagnozę i terapię dopasowaną do profilu funkcjonowania osób z ADHD i w spektrum autyzmu."
           }
         }
       ]
@@ -411,19 +411,18 @@
         <div>
             <span class="role-badge">Dyrektor Naukowy</span>
             <h1 class="profile-name">dr hab. inż. Sebastian Kraszewski</h1>
-            <span class="profile-titles">Profesor PWr | Trener Neuroróżnorodności | NCNI Wrocław</span>
+            <span class="profile-titles">Profesor PWr | Twórca Metody Kraszewskiego | NCNI Wrocław</span>
 
             <p class="bio-text">
                 Naukowiec, wizjoner i praktyk. Jego misją jest łączenie twardej nauki (fizyka, inżynieria biomedyczna)
                 z humanistycznym podejściem do zdrowia psychicznego. W NCNI Wrocław odpowiada za wdrażanie
                 najnowszych technologii (VR, BCI, AI) do praktyki klinicznej oraz nadzór merytoryczny nad skutecznością
-                terapii traumy i ADHD. Certyfikowany Trener Neuroróżnorodności, propagator wiedzy o potencjale
-                ukrytym w atypowych umysłach.
+                terapii traumy i ADHD.
             </p>
 
             <div class="tags-container">
                 <span class="tag" data-tooltip="Fizyka i inżynieria biomedyczna w służbie nowoczesnej terapii."><span>🔬</span> Biofizyka</span>
-                <span class="tag" data-tooltip="Rozwój terapii VR, biofeedbacku i AI w NCNI Wrocław."><span>🧠</span> Neuroinnowacje</span>
+                <span class="tag" data-tooltip="Autorska metoda łącząca VR, biofeedback i neuromodulację."><span>💡</span> Metoda Kraszewskiego</span>
                 <span class="tag" data-tooltip="Wykorzystanie VR w terapii traumy i ADHD."><span>🥽</span> VR Therapy</span>
                 <span class="tag" data-tooltip="Wspieranie osób ADHD/ASD w odkrywaniu i wykorzystaniu potencjału."><span>📈</span> Trener Neuroróżnorodności</span>
                 <span class="tag" data-tooltip="Technologie do obiektywizacji stresu i pracy z traumą."><span>❤️‍🩹</span> Traumatologia (Tech)</span>
@@ -431,6 +430,20 @@
 
             <a href="index.html#rezerwacja" class="nav-cta">Umów konsultację ekspercką</a>
         </div>
+    </div>
+
+    <!-- NOWA SEKCJA: Metoda Kraszewskiego -->
+    <div class="content-block" style="background: linear-gradient(to right, #ffffff, #f5f7ff); border-left: 5px solid var(--accent);">
+        <h2 style="color: var(--accent);">Twórca Metody Kraszewskiego</h2>
+        <p style="margin-bottom: 16px;">
+            Dr hab. inż. Sebastian Kraszewski jest autorem unikalnego, zintegrowanego programu terapeutycznego znanego jako <strong>Metoda Kraszewskiego</strong>. 
+            To innowacyjne podejście wykracza poza tradycyjną terapię, działając bezpośrednio na neurobiologiczne mechanizmy funkcjonowania mózgu.
+        </p>
+        <ul>
+            <li><strong>Synergia Technologii:</strong> Łączy Wirtualną Rzeczywistość (VR), Biofeedback HRV oraz Neuromodulację w jeden spójny system.</li>
+            <li><strong>Cel Metody:</strong> Optymalizacja pracy mózgu, poprawa koncentracji i regulacja emocji (szczególnie w ADHD i ASD).</li>
+            <li><strong>Unikalność:</strong> Metoda oparta na wieloletnich badaniach i doświadczeniu w inżynierii biomedycznej.</li>
+        </ul>
     </div>
 
     <div class="content-block">
@@ -467,7 +480,6 @@
         </ul>
     </div>
 
-    <!-- NOWA SEKCJA PUBLIKACJI -->
     <div class="content-block">
         <h2>Wybrane publikacje i obszary badawcze</h2>
         <p style="color: var(--text-muted); margin-bottom: 18px; font-size: 0.96rem;">
