--- a/kraszewski.html
+++ b/kraszewski.html
@@ -489,17 +489,25 @@
 
         <ul>
             <li>
-                <strong>Inżynieria biomedyczna i modele błon lipidowych.</strong><br>
-                Badania mechanicznych i termodynamicznych właściwości dwuwarstw lipidowych (np. praca w czasopiśmie „Langmuir” na temat DMPC/DPPC/DSPC/HSPC). 
-                Obszar kluczowy dla projektowania nośników leków i terapii celowanych.
+                <strong>Mechanika modelowych błon lipidowych.</strong><br>
+                Badania mechanicznych i termodynamicznych właściwości dwuwarstw lipidowych (np. <a href="https://pubs.acs.org/doi/10.1021/la100898e" target="_blank" style="color: var(--primary); text-decoration: underline;">praca w czasopiśmie „Langmuir”</a> na temat DMPC/DPPC/DSPC/HSPC). 
+                Obszar kluczowy dla projektowania <strong>inteligentnych</strong> nośników leków i terapii celowanych.
             </li>
             <li>
-                <strong>Nowe cząsteczki przeciwdrobnoustrojowe.</strong><br>
-                Współautor prac nad mechanizmami działania detergentów i antybiotyków na błony bakteryjne oraz „molecular guidelines” dla nowych związków przeciwbakteryjnych.
+                <strong>Nowe antybiotykoterapie.</strong><br>
+                Współautor prac nad <a href="https://pubmed.ncbi.nlm.nih.gov/34681599/" target="_blank" style="color: var(--primary); text-decoration: underline;">mechanizmami działania detergentów typu gemini</a> na błony bakteryjne oraz <a href="https://www.nature.com/articles/s41598-024-55418-6" target="_blank" style="color: var(--primary); text-decoration: underline;">„molecular guidelines”</a> dla nowych związków przeciwbakteryjnych.
             </li>
             <li>
-                <strong>Sztuczna inteligencja i symulacje molekularne.</strong><br>
-                Zastosowanie metod uczenia maszynowego i dynamiki molekularnej do projektowania leków, przewidywania własności cząsteczek i modelowania transporterów błonowych (m.in. SGLT1/SGLT2).
+                <strong>Symulacje celów molekularnych w terapiach celowanych.</strong><br>
+                Zastosowanie metod uczenia maszynowego i dynamiki molekularnej do projektowania leków, przewidywania własności cząsteczek i modelowania transporterów błonowych (m.in. SGLT1/SGLT2), będących celem molekularnym w terapiach przeciwrakowych. <a href="https://www.frontiersin.org/journals/molecular-biosciences/articles/10.3389/fmolb.2025.1668400/full" target="_blank" style="color: var(--primary); text-decoration: underline;">[Artykuł Frontiers]</a>
+            </li>
+            <li>
+                <strong>Sztuczna inteligencja (AI) w medycynie.</strong><br>
+                Specjalizacja w zastosowaniach AI we wspomaganiu pracy lekarza. W ramach współpracy z <a href="https://advancedhealthdynamics.com/" target="_blank" style="color: var(--primary); text-decoration: underline;">Advanced Health Dynamics sp. z o.o.</a> komercyjnie wdraża rozwiązania informatyczne oraz mobilne dla POZ i szpitali, usprawniając diagnostykę i optymalizując czas pracy klinicystów.
+            </li>
+            <li>
+                <strong>Aplikacje mobilne w ramach medycyny 4P.</strong><br>
+                Realizacja koncepcji medycyny 4P (<em>predictive, preventive, personalized, participatory</em>) poprzez łączenie AI z technologiami mobilnymi. Umożliwia to analizę danych do prognozowania ryzyka, wczesnego wykrywania problemów, personalizacji zaleceń oraz aktywnego włączania pacjenta w proces monitorowania i terapii.
             </li>
         </ul>
 
@@ -522,10 +530,11 @@
             oraz profesora Politechniki Wrocławskiej.
         </p>
         <div class="media-cards">
-            <!-- Dynamic Screenshot: Gazeta Wrocławska -->
+            <!-- Static Image: Gazeta Wrocławska (Manual upload required for reliability) -->
             <a href="https://gazetawroclawska.pl/dr-hab-inz-prof-sebastian-kraszewski/pk/7173681"
                class="media-card" target="_blank" rel="noopener">
-                <div class="media-thumb" style="background-image:url('https://s0.wp.com/mshots/v1/https%3A%2F%2Fgazetawroclawska.pl%2Fdr-hab-inz-prof-sebastian-kraszewski%2Fpk%2F7173681?w=600&h=400');"></div>
+                <!-- Zmieniono na gw.jpg, ponieważ automatyczne generowanie jest blokowane przez zabezpieczenia portalu -->
+                <div class="media-thumb" style="background-image:url('gw.jpg');"></div>
                 <div class="media-content">
                     <span class="media-tag">Osobowość Roku 2024</span>
                     <h3>Gazeta Wrocławska</h3>
@@ -533,10 +542,10 @@
                 </div>
             </a>
 
-            <!-- Dynamic Screenshot: PWr -->
+            <!-- Static Image: PWr -->
             <a href="https://pwr.edu.pl/uczelnia/aktualnosci/academia-professorum-iuniorum-po-raz-pierwszy-w-pelnym-skladzie-13563.html"
                class="media-card" target="_blank" rel="noopener">
-                <div class="media-thumb" style="background-image:url('https://s0.wp.com/mshots/v1/https%3A%2F%2Fpwr.edu.pl%2Fuczelnia%2Faktualnosci%2Facademia-professorum-iuniorum-po-raz-pierwszy-w-pelnym-skladzie-13563.html?w=600&h=400');"></div>
+                <div class="media-thumb" style="background-image:url('pwr.jpg');"></div>
                 <div class="media-content">
                     <span class="media-tag">Academia Professorum Iuniorum</span>
                     <h3>Politechnika Wrocławska</h3>
@@ -544,10 +553,10 @@
                 </div>
             </a>
 
-            <!-- Dynamic Screenshot: IR Forum -->
+            <!-- Static Image: IR Forum -->
             <a href="https://irforum.pl/speaker/dr-inz-sebastian-kraszewski/"
                class="media-card" target="_blank" rel="noopener">
-                <div class="media-thumb" style="background-image:url('https://s0.wp.com/mshots/v1/https%3A%2F%2Firforum.pl%2Fspeaker%2Fdr-inz-sebastian-kraszewski%2F?w=600&h=400');"></div>
+                <div class="media-thumb" style="background-image:url('irforum.jpg');"></div>
                 <div class="media-content">
                     <span class="media-tag">Naukowiec Przyszłości</span>
                     <h3>Inteligentny Rozwój</h3>
@@ -555,9 +564,9 @@
                 </div>
             </a>
 
-            <!-- Dynamic Screenshot: NCNI -->
+            <!-- Static Image: NCNI -->
             <a href="https://ncni.pl" class="media-card" target="_blank" rel="noopener">
-                <div class="media-thumb" style="background-image:url('https://s0.wp.com/mshots/v1/https%3A%2F%2Fncni.pl?w=600&h=400');"></div>
+                <div class="media-thumb" style="background-image:url('ncni-thumb.jpg');"></div>
                 <div class="media-content">
                     <span class="media-tag">NCNI Wrocław</span>
                     <h3>Naukowe Centrum Neuroinnowacji</h3>
