--- a/oferta.html
+++ b/oferta.html
@@ -251,12 +251,16 @@
     </div>
 
     <section class="container" style="padding: 80px 24px;">
-        <div style="text-align: center; margin-bottom: 30px;">
+        <div style="display: flex; align-items: center; justify-content: space-between; gap: 40px;; margin-bottom: 30px;">
+             <div style="flex: 1;">
+                 
             <span style="background: var(--primary-light); color: var(--primary); padding: 6px 12px; border-radius: 99px; font-size: 0.9rem; font-weight: 600;">Katalog Usług NCNI</span>
             <h1 style="font-size: 3rem; margin-top: 16px;">Scentralizowana Oferta</h1>
             <p style="color: var(--text-muted); font-size: 1.2rem; margin-top: 16px; max-width: 700px; margin-left: auto; margin-right: auto;">
                 Scentralizowany katalog usług medycznych i terapeutycznych. Od diagnostyki, przez terapię psychologiczną, aż po Neuro-Immersję Premium.
             </p>
+                  </div>
+             <div style="flex: 1; display: flex; justify-content: center; align-items: center;"><img src="sk.jpg" alt="Dr. Kraszewski" style="max-width: 100%; height: auto; border-radius: 16px; box-shadow: 0 10px 40px rgba(0,0,0,0.1);"></div>
         </div>
 
         <!-- KOŁECZKO CENNIK -->
